# siudemka

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cpp.hint
src/: main.cpp
src/sge/: bmd_destroyer.cpp  bmd_destroyer.h  bmd_reader.cpp  bmd_reader.h  bmd_structs.h  common.h  defs.h  point.h  point_utils.cpp  point_utils.h  sge.h
src/sge/assets/: model_def.cpp  model_def.h
src/sge/bmd/: bmd_destroyer.cpp  bmd_destroyer.h  bmd_reader.cpp  bmd_reader.h  bmd_structs.h
src/sge/events/: events.h  get_model_controller.h  set_model_angle_input.h  set_model_input.h  set_world_position.h
src/sge/object_scripts/: draw_queue_script.h  model_array.cpp  model_array.h  model_clickable.cpp  model_clickable.h  model_controller.cpp  model_controller.h  object_scripts.h  texture_set_renderer.cpp  texture_set_renderer.h  world_draw_queue.cpp  world_draw_queue.h
src/siudemka/: chars_pl.h  common.h  defs.h  main_scene.cpp  main_scene.h  siudemka.h
src/siudemka/events/: events.h  set_autorotate.h  set_rot_acceleration.h
src/siudemka/object_scripts/: autorotate_by_checkbox.cpp  autorotate_by_checkbox.h  cache_by_checkbox.cpp  cache_by_checkbox.h  fullscreen_on_key.cpp  fullscreen_on_key.h  input_by_ui.cpp  input_by_ui.h  input_if_ui.cpp  input_if_ui.h  input_if_ui_equals.cpp  input_if_ui_equals.h  input_if_ui_soft.cpp  input_if_ui_soft.h  model_only_on_key.cpp  model_only_on_key.h  object_scripts.h  rotate_by_drag.cpp  rotate_by_drag.h  rotate_model.cpp  rotate_model.h  window_height_on_key.cpp  window_height_on_key.h
tools/: bbox-cropper.py  bpoly-cropper.py  convert-json-sgebmd.py  convert-siudemka.bat  delta-maker.py  range-mover.py  tilemap-maker.py
tools/siudemka-model-source/: model.json  siudemka.json  tmap_base.txt  tmap_bogie.txt  tmap_chassis.txt  tmap_coupler.txt  tmap_door.txt  tmap_lights.txt  tmap_pant.txt
